# altoacademy-proj

./: README.md
.github/workflows/: build_container.yml  test.yaml
week_03/: README.md  run_lab_01.sh
week_03/lab_01/: pyproject.toml
week_03/lab_01/src/: config.py  main.py
week_03/lab_01/src/lab_01/: app.py  helper.py
week_04/env_04/: pyproject.toml
week_04/env_04/src/: rock_paper_scissor_game.py
week_04/env_04/src/notebooks/: OOP_Excercise.ipynb  tutorials.ipynb
week_05/env_05/: pyproject.toml
week_05/env_05/src/: app.py  create_sqlite3.py  example_requests.py
week_06/env_06/: pyproject.toml
week_06/env_06/src/lab/: app.py  config.json  helper.py  requirements.txt  utest_multiprocess.py
week_06/env_06/src/notebooks/: build_generator_function.ipynb  names.txt
week_06/env_06/src/scripts_parallel_test/: 01_try_thread.py  01_try_thread_improved.py  02_try_process.py  03_seq_compare.py  04_thread_compare.py  05_proc_compare.py  06_lock_management.py  07_deadlock.py  08_RLock.py  09_Queue.py  10_spawning_process.py  11_naming_process.py  12_process_background.py  13_killing_process.py  14_exchanging_obj_process.py  15_Pipe.py  process_subclass.py  thread_subclass.py
