[tool.poetry]
name = "env-05"
version = "0.1.0"
description = ""
authors = ["Pitikorn Khlaisamniang <121279047+pitikorn32@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "env_05", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
